# Kairo

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
kairo-landing/: README.md  package-lock.json  package.json  pnpm-lock.yaml
kairo-landing/public/: site.webmanifest
kairo-landing/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
kairo-landing/src/app/about/: page.tsx
kairo-landing/src/components/: ApiTestingSection.tsx  ApiTestingVisuals.tsx  ApiTestingVisuals2.tsx  BioSection.tsx  ConnectionPoolDiagram.tsx  DetailRow.tsx  DetailSections.tsx  DetailVisuals.tsx  DownloadCTA.tsx  FeaturesGrid.tsx  Footer.tsx  Hero.tsx  MoreFeatures.tsx  Navbar.tsx  ProtocolVisuals.tsx  ProtocolsSection.tsx  SakuraFall.tsx  ScrollReveal.tsx  icons.tsx
kairo-landing/src/components/blog/: ArchitectureDiagram.tsx  BlogHeader.tsx  BuildYourOwnChecklist.tsx  CodeBlock.tsx  EvolutionMockup.tsx  RequestLifecycle.tsx
public/: mask.avif
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: env.rs  http.rs  import.rs  loadtest.rs  mock.rs  mod.rs  openapi_parser.rs  postman_parser.rs  scripts.rs  sse.rs  storage.rs  ws.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_init.sql
src-tauri/src/models/: misc.rs  mod.rs  request.rs  response.rs
src-tauri/src/storage/: collections.rs  environments.rs  history.rs  mod.rs  requests.rs  settings.rs  tabs.rs
src/components/PerformancePanel/: PerformancePanel.tsx
src/components/RequestBuilder/: AuthTab.tsx  BodyTab.tsx  CodeTab.tsx  CurlImportModal.tsx  FormDataTable.tsx  KeyValueTable.tsx  RequestBuilder.tsx  SaveRequestModal.tsx  ScriptsTab.tsx  SettingsTab.tsx  UrlBar.tsx
src/components/ResponseViewer/: JsonTree.tsx  OtherTabs.tsx  ResponseBodyTab.tsx  ResponseViewer.tsx  StatusBar.tsx
src/components/Settings/: SettingsDrawer.tsx
src/components/Sidebar/: CollectionsPanel.tsx  EnvironmentSelector.tsx  HistoryPanel.tsx  IconRail.tsx  Sidebar.tsx
src/components/Tabs/: TabBar.tsx
src/components/common/: ConfirmModal.tsx  ContextMenu.tsx  ErrorBoundary.tsx  PromptModal.tsx  ResizeHandle.tsx  ZoomWrapper.tsx
src/features/about/: AboutDevModal.tsx
src/features/environments/: EnvironmentsModal.tsx  EnvironmentsPanel.tsx
src/features/graphql/: GraphqlModal.tsx
src/features/mocks/: MockServerModal.tsx
src/features/runner/: RunnerModal.tsx
src/features/sockets/: SocketsModal.tsx
src/features/sse/: SseModal.tsx
src/features/tests/: TestsModal.tsx
src/features/updater/: UpdateModal.tsx  useAutoUpdate.ts
src/lib/: api.ts  codegen.ts  curl.ts  errorMessages.ts  factories.ts  graphql.ts  monacoConfig.ts  statusColor.ts
src/stores/: collectionStore.ts  environmentStore.ts  graphqlStore.ts  loadTestStore.ts  mockStore.ts  openTabsStore.ts  runnerStore.ts  settingsStore.ts  socketStore.ts  sseStore.ts  tabStore.ts
src/styles/: theme.css
src/types/: index.ts  loadtest.ts
