[package]
name = "requestkit"
version = "0.1.0"
description = "Fast, lightweight, cross-platform HTTP client"
edition = "2021"
rust-version = "1.77"

[lib]
name = "requestkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# HTTP execution — hyper gives us low-level access to connect/TTFB timing that
# a browser fetch() can never expose. reqwest wraps it with a friendly API and
# connection pooling for when we don't need per-phase timing precision.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "stream"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Scripting sandbox for pre-request scripts / tests (no Node.js dependency)
rquickjs = { version = "0.6", features = ["bindgen"] }

uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

# Fast JSON parsing for large response bodies
simd-json = "0.13"

[features]
custom-protocol = ["tauri/custom-protocol"]

# ---------------------------------------------------------------------------
# Release profile tuned for a small, fast binary — this is what makes
# RequestKit feel instant to launch compared to Electron-based tools.
# ---------------------------------------------------------------------------
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"   # optimize for size; use 3 instead if startup CPU matters more than binary size
panic = "abort"
strip = true
