[package]
name = "kairo"
version = "1.1.4"
description = "Fast, lightweight, cross-platform HTTP client"
edition = "2021"
rust-version = "1.77"

[lib]
name = "kairo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "stream", "multipart"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Scripting sandbox for pre-request scripts / tests (no Node.js dependency)
rquickjs = { version = "0.6", features = ["bindgen"] }

uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

simd-json = "0.13"

# WebSocket client (Sockets feature)
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Mock Server (embedded HTTP server + template variables)
axum = "0.7"
rand = "0.8"
regex = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
